# CodeShifter

./: .pre-commit-config.yaml  LICENSE  README.md  eslint.sh
.github/workflows/: pre-commit.yaml  python-lint.yaml
server/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
server/src/: app.py
server/src/routes/: refactor_routes.py
server/src/services/: script_refactor.py
server/src/utils/: config.py  const.py  files.py  helpers.py  logger.py
